[package]
name = "www"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
axum = {version = "0.8.0", features = ["macros", "tokio"]}
axum-template = {version = "3.0.0", features = ["tera"]}
listenfd = "1.0.2"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
tera = "1.20.0"
tokio = {version = "1.44.1", features = ["full"]}
tower-livereload = "0.9.6"
